# navi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml  deny.toml  justfile  rustquty.toml
crates/copland/: Cargo.toml  README.md
crates/copland/src/: effect.rs  interaction.rs  keymap.rs  layout.rs  lib.rs  list.rs  modal.rs  panel.rs  text_input.rs
crates/navi-acp/: Cargo.toml  DESIGN.md  README.md
crates/navi-acp/src/: client.rs  error.rs  event.rs  lib.rs  peer.rs  process.rs  transport.rs  types.rs
crates/navi-acp/tests/: smoke.rs
crates/navi-browser/: Cargo.toml  INTEGRATION.md  README.md
crates/navi-browser/src/: config.rs  engine.rs  factory.rs  lib.rs  session.rs  url_policy.rs
crates/navi-browser/src/engines/: cdp.rs  cdp_launch.rs  cdp_protocol.rs  cloakbrowser.rs  mod.rs
crates/navi-cli/: Cargo.toml  README.md
crates/navi-cli/src/: acp.rs  bench_cmd.rs  browser_cmd.rs  eval_cmd.rs  harness_cmd.rs  main.rs  mcp_cmd.rs  memory_cmd.rs  plugin_cmd.rs  registry_cmd.rs  server_cmd.rs  skill_cmd.rs  voice_cmd.rs
crates/navi-cli/src/acp/: events.rs  handlers.rs  mod.rs  permissions.rs  prompt_runner.rs  schema.rs  state.rs
crates/navi-cli/tests/: headless_e2e.rs  plugin_install_update.rs  pty_smoke.rs
crates/navi-core/: Cargo.toml  README.md  build.rs
crates/navi-core/registry-snapshot/: manifest.json
crates/navi-core/registry-snapshot/providers/: anthropic.json  charm-hyper.json  commandcode.json  deepseek.json  github-copilot.json  gitlawb.json  google-gemini.json  groq.json  llamacpp.json  lmstudio.json  mimo-anthropic-ams.json  mimo-anthropic-cn.json  mimo-anthropic-sgp.json  minimax.json  mistral.json  moonshot.json  nvidia.json  ollama.json  openai.json  opencode-go.json  opencode.json  openrouter.json  stepfun.json  xai.json  xiaomi.json  zai-coding.json  zai.json
crates/navi-core/registry-snapshot/schemas/: provider.schema.json  transcription-provider.schema.json
crates/navi-core/src/: agent.rs  attachment_store.rs  background_model.rs  benchmark.rs  branch_race.rs  cancel.rs  capability.rs  compact.rs  config.rs  context.rs  credentials.rs  dataset.rs  diagnose.rs  effect.rs  eval.rs  event.rs  file_lock.rs  fs_util.rs  harness.rs  lib.rs  logging.rs  mcp_firewall.rs  model.rs  model_router.rs  notify.rs  operational_memory.rs  patch.rs  plan_mode.rs  plan_store.rs  prompt.rs  provider_id.rs  recap.rs  repetition.rs  replay_gate.rs  repo_intelligence.rs  runtime.rs  runtime_components.rs  sandbox.rs  security.rs  session.rs  (+11 more)
crates/navi-core/src/config/: defaults.rs  persistence.rs  types.rs
crates/navi-core/src/goal/: accounting.rs  extension.rs  mod.rs  runtime.rs  tests.rs  (+4 more)
crates/navi-core/tests/: parity_check.rs
crates/navi-dart/: Cargo.toml  README.md
crates/navi-dart/src/: engine.rs  event_stream.rs  lib.rs  surface.rs  types.rs
crates/navi-dart/tests/: ffi_api.rs
crates/navi-lite/: Cargo.toml  README.md
crates/navi-lite/src/: lib.rs
crates/navi-mcp/: Cargo.toml  README.md
crates/navi-mcp/src/: lib.rs
crates/navi-napi/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/navi-napi/docs/: navi-napi-guide.md
crates/navi-napi/scripts/: build-native.mjs  postinstall.mjs  prepack.mjs  prepublish-check.mjs
crates/navi-napi/src/: lib.rs
crates/navi-napi/test/: binding.test.mjs  types-smoke.ts
crates/navi-openai/: Cargo.toml  README.md
crates/navi-openai/src/: errors.rs  lib.rs  mapping.rs  oauth.rs  provider.rs  sse.rs  tests.rs  transport.rs  types.rs
crates/navi-plugin-broker/: Cargo.toml  README.md
crates/navi-plugin-broker/src/: error.rs  fs_broker.rs  git_broker.rs  http_broker.rs  install_approval.rs  lib.rs  output_sanitizer.rs  redteam_tests.rs
crates/navi-plugin-host/: Cargo.toml  README.md
crates/navi-plugin-host/src/: lib.rs  sandbox.rs
crates/navi-plugin-manifest/: Cargo.toml  README.md
crates/navi-plugin-manifest/examples/: sign_local_package.rs
crates/navi-plugin-manifest/src/: approval.rs  classifier.rs  defaults.rs  error.rs  hash.rs  lib.rs  lockfile.rs  marketplace.rs  parser.rs  registry.rs  risk.rs  signature.rs  store.rs  types.rs  validator.rs
crates/navi-plugin-orchestrator/: Cargo.toml  README.md
crates/navi-plugin-orchestrator/src/: lib.rs  orchestrator.rs  tool_adapter.rs
crates/navi-plugin-runtime/: Cargo.toml  README.md
crates/navi-plugin-runtime/src/: component.rs  error.rs  lib.rs  runtime.rs  wit.rs
crates/navi-plugin-runtime/wit/: navi-plugin.wit
crates/navi-providers/: Cargo.toml  README.md
crates/navi-providers/src/: lib.rs
crates/navi-sdk/: Cargo.toml  README.md
crates/navi-sdk/src/: acp_ops.rs  attachment_tool.rs  auth_ops.rs  credentials.rs  engine.rs  engine_api.rs  engine_driver.rs  host_tool.rs  lib.rs  mcp_ops.rs  memory_ops.rs  notify_ops.rs  plugins.rs  profiles.rs  routing_ops.rs  tooling.rs  tui_extensions.rs  types.rs  voice.rs
crates/navi-server/: Cargo.toml  README.md
crates/navi-server/src/: http_tests.rs  lib.rs  main.rs  server.rs  state.rs
crates/navi-tui/: Cargo.toml  README.md
crates/navi-tui/src/: app.rs  background.rs  browser.rs  chat.rs  chat_blocks.rs  clipboard.rs  commands.rs  dispatch.rs  errors.rs  event_loop.rs  input.rs  keybindings.rs  lib.rs  mcp_status.rs  mouse.rs  notifications.rs  paste_compact.rs  path_mentions.rs  persistence.rs  plan_progress.rs  plan_review.rs  plugin_approval.rs  plugins.rs  providers.rs  render.rs  runtime.rs  session.rs  settings.rs  state.rs  stream.rs  tests.rs  theme.rs  tools.rs  update_check.rs  usage.rs  view.rs
crates/navi-tui/tests/: event_loop.rs  scenarios.rs  screenshots.rs  terminal_corruption_repro.rs
crates/navi-vfs/: Cargo.toml  README.md  build.rs
crates/navi-vfs/src/: code.rs  dynamic.rs  format.rs  lang.rs  lib.rs  minify.rs  validate.rs
crates/navi-voice/: Cargo.toml  README.md
crates/navi-voice/src/: capture.rs  doctor.rs  download.rs  engine.rs  lang.rs  lib.rs  mel.rs  paths.rs  types.rs  vocab.rs  wav.rs
crates/navi-voice/tests/: transcribe_libri.rs
(+496 files in other folders)
