[workspace]
members = [
    "crates/navi-cli",
    "crates/navi-core",
    "crates/navi-mcp",
    "crates/navi-openai",
    "crates/navi-plugin-api",
    "crates/navi-plugin-broker",
    "crates/navi-plugin-host",
    "crates/navi-plugin-manifest",
    "crates/navi-plugin-orchestrator",
    "crates/navi-plugin-runtime",
    "crates/navi-providers",
    "crates/navi-sdk",
    "crates/navi-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
directories = "6"
libloading = "0.9"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.46.5", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
async-stream = "0.3"
agent-client-protocol = "0.12.1"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
portable-pty = "0.8"
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process"] }
toml = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
wiremock = "0.6"
navi-core = { path = "crates/navi-core" }
navi-mcp = { path = "crates/navi-mcp" }
navi-openai = { path = "crates/navi-openai" }
navi-plugin-api = { path = "crates/navi-plugin-api" }
navi-plugin-broker = { path = "crates/navi-plugin-broker" }
navi-providers = { path = "crates/navi-providers" }
navi-plugin-host = { path = "crates/navi-plugin-host" }
navi-plugin-manifest = { path = "crates/navi-plugin-manifest" }
navi-plugin-orchestrator = { path = "crates/navi-plugin-orchestrator" }
navi-plugin-runtime = { path = "crates/navi-plugin-runtime" }
navi-sdk = { path = "crates/navi-sdk" }
navi-tui = { path = "crates/navi-tui" }
