[package]
name = "copland"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A ratatui-based UI framework for building terminal UIs consistently and fast."
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
