[package]
name = "navi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "navi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fastrand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
navi-browser.workspace = true
# Product binary enables local embedding model stack (opt-in at navi-core).
navi-core = { workspace = true, features = ["embeddings"] }
navi-mcp.workspace = true
navi-plugin-broker.workspace = true
navi-plugin-manifest.workspace = true
navi-sdk = { workspace = true, default-features = true }
navi-tui = { workspace = true, default-features = true }
navi-voice = { path = "../navi-voice", default-features = false }

[features]
# Portable release binaries default to no ORT (musl/Windows/x64 mac lack
# prebuilt ort-sys). Opt in with `--features voice-onnx` on supported hosts.
# wasm-plugins come from navi-sdk default features.
# embeddings come from navi-core dep features above (not a cargo feature flag).
default = []
voice-onnx = ["navi-voice/onnx", "navi-sdk/voice-onnx"]
# CloakBrowser Rust engine (requires local PR checkout path or git dep).
browser-cloak = ["navi-core/browser-cloak"]

[dev-dependencies]
wiremock.workspace = true
portable-pty.workspace = true
