[package]
name = "navi-core"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
directories.workspace = true
fastrand.workspace = true
futures-util.workspace = true
jsonschema.workspace = true
navi-vfs.workspace = true
reqwest.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
toml.workspace = true
# Pinned in the workspace to avoid the E0119 conflict between `time >= 0.3.48` and
# `ratatui-widgets 0.3.x`. Tracked transitively by `tracing-appender`.
time.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["embeddings"]
embeddings = []

[dependencies.candle-core]
version = "0.11"

[dependencies.candle-transformers]
version = "0.11"

[dependencies.candle-nn]
version = "0.11"

[dependencies.tokenizers]
version = "0.22"

[dependencies.hf-hub]
version = "0.4"
