[package]
name = "navi-dart"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dart FFI bindings for the NAVI agent runtime SDK"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
navi-core.workspace = true
navi-sdk.workspace = true
navi-plugin-manifest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
