[package]
name = "navi-openai"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
navi-core.workspace = true

[dev-dependencies]
wiremock.workspace = true
