[package]
name = "navi-openai"
version = "0.2.5"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
navi-core = { version = "0.2.0", path = "../navi-core", default-features = false }

[dev-dependencies]
wiremock.workspace = true
