[package]
name = "navi-plugin-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
navi-plugin-manifest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
navi-plugin-runtime = { workspace = true }
wat = "1"
