[package]
name = "navi-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
libloading.workspace = true
navi-core.workspace = true
navi-plugin-api.workspace = true
serde_json.workspace = true
tracing.workspace = true
landlock = { version = "0.4", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[features]
default = ["landlock"]
landlock = ["dep:landlock"]
