[package]
name = "navi-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
libloading.workspace = true
navi-core.workspace = true
navi-plugin-api = { workspace = true, features = ["tui"] }
copland.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Linux-only filesystem sandbox (must not be built on macOS/Windows).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[features]
default = ["tui"]
# Kept for backwards compatibility; landlock is always available on Linux.
landlock = []
tui = ["navi-plugin-api/tui"]
