[package]
name = "navi-plugin-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
regex = "1"
ed25519-dalek = { version = "3", features = ["serde"] }
base64 = { workspace = true }
hex = "0.4"
rand = "0.10"
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
