[package]
name = "navi-plugin-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
navi-core = { workspace = true }
navi-plugin-manifest = { workspace = true }
navi-plugin-broker = { workspace = true }
navi-plugin-runtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
