[package]
name = "navi-plugin-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
navi-core = { workspace = true }
navi-plugin-manifest = { workspace = true }
navi-plugin-broker = { workspace = true }
navi-plugin-runtime = { workspace = true, optional = true }

[features]
default = []
wasm-runtime = ["dep:navi-plugin-runtime"]

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
