[package]
name = "navi-plugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmtime = { version = "33", default-features = false, features = ["runtime", "cranelift"] }

[dev-dependencies]
wat = "1"
