[package]
name = "navi-providers"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Provider facade for NAVI — re-exports the provider implementation crate."
repository.workspace = true
homepage.workspace = true

[dependencies]
navi-core.workspace = true
navi-openai.workspace = true
