[package]
name = "navi-providers"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Provider facade for NAVI — re-exports the provider implementation crate."
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
navi-core.workspace = true
navi-openai.workspace = true
