[package]
name = "navi-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
navi-core.workspace = true
navi-mcp.workspace = true
navi-plugin-manifest.workspace = true
navi-plugin-orchestrator = { workspace = true, optional = true, features = ["wasm-runtime"] }
navi-providers.workspace = true
navi-plugin-host.workspace = true

[features]
default = []
wasm-plugins = ["dep:navi-plugin-orchestrator"]

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
