[package]
name = "navi-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
navi-core.workspace = true
navi-mcp.workspace = true
navi-plugin-broker.workspace = true
navi-plugin-manifest.workspace = true
navi-plugin-orchestrator = { workspace = true, optional = true, features = ["wasm-runtime"] }
navi-providers.workspace = true
navi-plugin-api = { workspace = true, features = ["tui"] }
navi-voice.workspace = true
copland.workspace = true

[features]
default = []
wasm-plugins = ["dep:navi-plugin-orchestrator"]
# Optional ONNX Runtime ASR (not portable to musl / all hosts).
voice-onnx = ["navi-voice/onnx"]

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
