[package]
name = "navi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket server exposing NAVI engine for remote mobile clients"

[[bin]]
name = "navi-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes = "1"
clap.workspace = true
futures-util.workspace = true
navi-core.workspace = true
navi-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
warp.workspace = true

[dev-dependencies]
tempfile.workspace = true
