[package]
name = "navi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard = "3"
async-trait.workspace = true
crossterm.workspace = true
image.workspace = true
miniz_oxide = "0.8"
ratatui.workspace = true
ratatui-image.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-width.workspace = true
navi-sdk.workspace = true
navi-core.workspace = true
navi-plugin-manifest.workspace = true
navi-plugin-broker.workspace = true
base64.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
