[package]
name = "navi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-width.workspace = true
navi-sdk.workspace = true
navi-core.workspace = true
navi-plugin-manifest.workspace = true
navi-plugin-broker.workspace = true
base64.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
