[package]
name = "navi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
copland.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-width.workspace = true
navi-sdk.workspace = true
navi-core.workspace = true
navi-plugin-manifest.workspace = true
navi-plugin-broker.workspace = true
navi-plugin-api = { workspace = true, features = ["tui"] }
base64.workspace = true
toml.workspace = true
# Kitty / Sixel / iTerm2 image previews (no chafa — text-only when unsupported).
ratatui-image = { version = "11", default-features = false, features = ["image-defaults", "crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[dev-dependencies]
tempfile.workspace = true
