[package]
name = "navi-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-json.workspace = true
tree-sitter-c-sharp.workspace = true

[dev-dependencies]
tempfile.workspace = true
