[package]
name = "navi-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
libloading.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-language = "0.1.7"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile.workspace = true
